assignments/day9/template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",

  "parameters": {
    "vmName": { "type": "string" },
    "location": { "type": "string" },
    "vmAdminUsername": { "type": "string" },
    "vmAdminPassword": { "type": "securestring" },
    "osType": {
      "type": "string",
      "allowedValues": [ "Windows", "Linux" ]
    },
    "customHtml": { "type": "string" },
    "customAuthData": { "type": "string" }
  },

  "variables": {
    "vnetName": "kpvnet",
    "subnetName": "mySubnet",
    "publicIPName": "[concat(parameters('vmName'),'PublicIP')]",
    "nicName": "[concat(parameters('vmName'),'NIC')]",
    "vmSize": "Standard_D2s_v3"
  },

  "resources": [

    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2022-07-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups','myNSG')]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [ "10.0.0.0/16" ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "10.0.1.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups','myNSG')]"
              }
            }
          }
        ]
      }
    },

    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2022-07-01",
      "name": "[variables('publicIPName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },

    {
  "type": "Microsoft.Network/networkSecurityGroups",
  "apiVersion": "2022-07-01",
  "name": "myNSG",
  "location": "[parameters('location')]",
  "properties": {
    "securityRules": [

      {
        "name": "Allow-RDP",
        "properties": {
          "priority": 1000,
          "direction": "Inbound",
          "access": "Allow",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "3389",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*"
        }
      },

      {
        "name": "Allow-SSH",
        "properties": {
          "priority": 1010,
          "direction": "Inbound",
          "access": "Allow",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "22",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*"
        }
      },

      {
        "name": "Allow-HTTP",
        "properties": {
          "priority": 1020,
          "direction": "Inbound",
          "access": "Allow",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "80",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*"
          }
        }

      ]
    }
  },


    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2022-07-01",
      "name": "[variables('nicName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('subnetName'))]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPName'))]"
              }
            }
          }
        ]
      }
    },

 
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-07-01",
      "name": "[parameters('vmName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('vmName')]",
          "adminUsername": "[parameters('vmAdminUsername')]",
          "adminPassword": "[parameters('vmAdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[if(equals(parameters('osType'),'Windows'),'MicrosoftWindowsServer','Canonical')]",
            "offer": "[if(equals(parameters('osType'),'Windows'),'WindowsServer','0001-com-ubuntu-server-jammy')]",
            "sku": "[if(equals(parameters('osType'),'Windows'),'2019-Datacenter','22_04-lts-gen2')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            }
          ]
        }
      },
      "resources": [
        {
          "type": "extensions",
          "apiVersion": "2023-07-01",
          "name": "[concat(parameters('vmName'),'Extension')]",
          "location": "[parameters('location')]",
          "dependsOn": [
            "[resourceId('Microsoft.Compute/virtualMachines', parameters('vmName'))]"
          ],
          "properties": {
            "publisher": "[if(equals(parameters('osType'),'Windows'),'Microsoft.Compute','Microsoft.Azure.Extensions')]",
            "type": "[if(equals(parameters('osType'),'Windows'),'CustomScriptExtension','CustomScript')]",
            "typeHandlerVersion": "[if(equals(parameters('osType'),'Windows'),'1.10','2.1')]",
            "autoUpgradeMinorVersion": true,
            "settings": {
              "fileUris": [
                "[if(equals(parameters('osType'),'Windows'),'https://raw.githubusercontent.com/Bhavesh2509/Script/main/winscript1.ps1','https://raw.githubusercontent.com/Bhavesh2509/Script/main/linuxscript1.sh')]"
              ]
            },
            "protectedSettings": {
              "commandToExecute": "[if(equals(parameters('osType'),'Windows'), concat('powershell -ExecutionPolicy Unrestricted -File winscript1.ps1 -CustomHtml \"', parameters('customHtml'), '\" -CustomAuthData \"', parameters('customAuthData'), '\"'), concat('bash linuxscript1.sh \"', parameters('customHtml'), '\" \"', parameters('customAuthData'), '\"'))]"
            }
          }
        }
      ]
    }
  ]
}
